@startuml
class Cryptography <<Singleton>> {
    +newCipher(passphrase : String)
    +getCipher(passphrase: String, inputStream: InputStream)
}
class CryptographyEngine <<Singleton>> {
    +decrypt(encryptedFile: File)
    +encrypt(plainFilePath: String, encryptedFilePath: String)
}
class CryptographyRepositoryImpl {
    +encryptFile(plainFilePath: String, encryptedFilePath: String)
    +decryptFile(encryptedFile: File)
}
class ZipRepositoryImpl {
     +zip(files: File, zipFile: File)
     +unzip(path: String, zipFile: ZipFile)
}
class ZipManger <<Singleton>> {
    +zip(files: File, zipFile: File)
    +unzip(path: String, zipFile: ZipFile)
}
class LoginRepositoryImpl {
    +createStartFiles()
    +checkPassword()
}
class FileBrowserRepositoryImpl {
    +getFiles(path : String)
}
interface CryptographyRepository {
    +encryptFile(plainFilePath: String, encryptedFilePath: String)
    +decryptFile(encryptedFile: File)
}
interface ZipRepository {
     +zip(files: File, zipFile: File)
     +unzip(path: String, zipFile: ZipFile)
}
interface FileBrowserRepository {
    +getFiles(path : String)
}
interface LoginRepository {
    +createStartFiles()
    +checkPassword()
}
class DecryptFileUseCase {
+decrypt()
}
class EncryptFileUseCase {
+encrypt()
}
class ZipUseCase {
+zip()
}
class UnzipUseCase {
+unzip()
}
class GetFileUseCase{
+getFiles()
}
class CheckPasswordUseCase {
+checkPassword()
}
class CreateStartFilesUseCase{
+createStartFiles()
}
class FileBrowserFragment
class HomeFragment
class LoginFragment
class HomeViewModel
class LoginViewModel
class FileBrowserViewModel
class BinFragment
class BinViewModel
ZipManger --|> ZipRepositoryImpl
CryptographyEngine --|> CryptographyRepositoryImpl
Cryptography --|> CryptographyRepositoryImpl
CryptographyRepositoryImpl  --|> CryptographyRepository
FileBrowserRepositoryImpl --|> FileBrowserRepository
ZipRepositoryImpl --|> ZipRepository
LoginRepositoryImpl --|> LoginRepository
ZipRepository --|> ZipUseCase
ZipRepository --|> UnzipUsecase
LoginRepository --|> CheckPasswordUseCase
LoginRepository --|> CreateStartFilesUseCase
CryptographyRepository --|> EncryptFileUseCase
CryptographyRepository --|> DecryptFileUseCase
FileBrowserRepository --|> GetFileUseCase
DecryptFileUseCase --|> HomeViewModel
GetFileUseCase --|> HomeViewModel
ZipUseCase --|> BinViewModel
UnzipUsecase --|> BinViewModel
BinViewModel --|> BinFragment
EncryptFileUseCase --|> FileBrowserViewModel
GetFileUseCase --|> FileBrowserViewModel
CheckPasswordUseCase --|> LoginViewModel
CreateStartFilesUseCase --|> LoginViewModel
FileBrowserViewModel --|> FileBrowserFragment
HomeViewModel --|> HomeFragment
LoginViewModel --|> LoginFragment
@enduml